Add golang-chi framework. Introduces chi-framework and circleci. (#2)
* Add circleci
* Add chi-framework.
* Test handlers
