# openapi/simple.yaml
@@ -81,6 +81,21 @@ paths:
       summary: Ritorna un timestamp in formato RFC5424.
       tags:
       - public
+    options:
+      operationId: options_echo
+      responses:
+        '200':
+          description: preflight request with cors response headers.
+          headers:
+            Access-Control-Allow-Methods:
+              schema:
+                type: string
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+      summary: Url per pre-flight cors request
+      tags:
+      - public
   /status:
     get:
       description: |
